# snaptext

./: .pre-commit-config.yaml  Makefile  README.md  install.sh  pyproject.toml  pytest.ini
.github/: markdown-link-check-config.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint.yml  test.yml  validate.yml
cli/: cli.py
core/: tool.py
scripts/: install.sh
server/: server.py
server/static/: script.js  style.css
server/templates/: index.html
tests/: __init__.py  conftest.py  test_cli.py  test_core_ocr.py  test_performance.py  test_server.py
