[tool.poetry]
name = "snaptext"
version = "0.1.0"
description = "Simple OCR tool to extract text from images."
authors = ["Your Name <you@example.com>"]
packages = [{ include = "core" }, { include = "cli" }, { include = "server" }]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0"
pytesseract = "^0.3.10"
pillow = "^10.0"
opencv-python = ">=4.8.0,<4.12"
numpy = ">=1.24.0,<2.0"
pre-commit = "^4.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
pytest-mock = "^3.14.1"
requests = "^2.32.5"
psutil = "^7.0.0"
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.1"
safety = "^3.6.1"
bandit = "^1.8.6"
radon = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
